# Rust_Custom_Blockchain

./: Cargo.toml
data/blocks/: db  snap.0000000000000575  snap.0000000000000F7A  snap.00000000000010D1  snap.000000000000200C  snap.00000000000037F9  snap.00000000000050AE
data/utxos/: db  snap.0000000000000223
data/wallets/: db
src/: block.rs  blockchain.rs  cli.rs  error.rs  main.rs  transaction.rs  tx.rs  utxoset.rs  wallet.rs
