[package]
name = "custom-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bitcoincash-addr = "0.5.2"
clap = "4.5.8"
env_logger = "0.11.3"
failure = "0.1.8"
log = "0.4.22"
merkle-cbt = "0.3.2"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = {version="1.0.204" , features=["derive"]}
serde_json = "1.0.120"
sha2 = "0.10.8"
sled = "0.34.7"
